@@ -29,9 +29,11 @@ import java.util.Map;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.mapreduce.v2.api.records.TaskAttemptId;
 import org.apache.hadoop.mapreduce.v2.api.records.TaskAttemptState;
+import org.apache.hadoop.mapreduce.v2.api.records.TaskId;
 import org.apache.hadoop.mapreduce.v2.api.records.TaskType;
 import org.apache.hadoop.mapreduce.v2.app.job.Task;
 import org.apache.hadoop.mapreduce.v2.app.job.TaskAttempt;
+import org.apache.hadoop.mapreduce.v2.app.webapp.dao.TaskAttemptInfo;
 import org.apache.hadoop.mapreduce.v2.util.MRApps;
 import org.apache.hadoop.mapreduce.v2.util.MRApps.TaskAttemptStateUI;
 import org.apache.hadoop.yarn.webapp.SubView;
@@ -48,6 +50,12 @@ public class AttemptsPage extends TaskPage {
     @Override
     protected boolean isValidRequest() {
       return true;
+    }
+
+    @Override
+    protected String getAttemptId(TaskId taskId, TaskAttemptInfo ta) {
+      return "<a href='" + url("task", taskId.toString()) +
+          "'>" + ta.getId() + "</a>";
     }
 
     @Override
